[package]
name = "tetruino"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tetruino"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "f6b79dccbb36808b06f9c5d3e0050dc72ccc25cf"
features = ["arduino-uno"]
